--- a/css/login.css
+++ b/css/login.css
@@ -85,8 +85,19 @@ input {
 	background-color: #eee;
 	border: none;
 	padding: 12px 15px;
-	margin: 8px 0;
+	margin: 4px 0;
 	width: 100%;
+	height: 1%;
+}
+
+select {
+	border-radius: 15px;
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: -3px 0 2px;
+	width: 100%;
+	height: 1%;
 }
 
 .container2 {
