--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-
-.conteudo p{
-  font-style: New Century Schoolbook, TeX Gyre Schola, serif;
+*{
+font-family: 'Montserrat', sans-serif;;
 }
 
 *, 
@@ -15,6 +15,7 @@
 }
 
 html{
+  scroll-behavior: smooth;
   min-height: 100%;
 }
 :root {
@@ -34,7 +35,8 @@ details {
   width:100%;
   height: 65px;
   background-color: #e5621c;
-}
+} 
+
 summary {
   writing-mode: vertical-lr;
   text-align: center;
@@ -136,17 +138,6 @@ details[open]::before {
   100% {
     opacity: 0;
   }
-}
-.logo{
-  width: 10px;
-  height: auto;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-}
-.logo img{
-  width: 200%;
-  height: 200%;
 }
 
 
@@ -273,18 +264,30 @@ section .home{
     cursor: pointer;
 }
   
+.conteudo h1 {
+  --b: 0.1em;  
+  --c: orangered; /* a cor */
+  
+  color: #0000;
+  padding-block: var(--b);
+  background: 
+    linear-gradient(var(--c) 50%, white 0) 0% calc(100% - var(--_p,0%))/100% 200%,
+    linear-gradient(var(--c) 0 0) 0% var(--_p,0%)/var(--_p,0%) var(--b) no-repeat;
+  -webkit-background-clip: text,padding-box;
+          background-clip: text,padding-box;
+  transition: .3s var(--_s,0s) linear,background-size .3s calc(.3s - var(--_s,0s));
+}
 
   .conteudo h1:hover {
-    text-transform: uppercase;
     --_p: 100%;
-    color: var(--c);
+  --_s: .3s;
     -webkit-filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
     filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
   }
 
 .conteudo p{
   text-shadow:5px #0000;
-  margin-top: 30px;
+  margin-top: 50px;
   font-size: 28px;
   color:white;
   text-align: center;
@@ -300,15 +303,29 @@ section .home{
   padding: 14px 70px;
   margin-top: 25px;
 }
+.conteudo a:hover{
+  transform: scale(1.1);
+    transition: all 0.5s;
+  background-color: #ff4400;
+  color: rgb(240, 225, 220);
+  font-size: 25px;
+  border: 2px solid orangered;
+  border-radius: 50px;
+  padding: 14px 70px;
+  margin-top: 25px;
+  -webkit-filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
+  filter: drop-shadow(15px 10px 5px rgba(0,0,0,.5));
+}
+
 .conteudo p{
   color: #fff;
   margin-top: 10vw;
   font-family: Arial;
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
+  overflow: hidden; 
+  border-right: .15em solid orange; /* O cursor de digito */
+  white-space: nowrap; 
+  margin: 0 auto; 
+  letter-spacing: .15em; 
   animation: 
     typing 3.5s steps(30, end),
     blink-caret .5s step-end  ;
@@ -333,45 +350,8 @@ section .home{
 
 
 
-.conteudo a:hover{
-  transform: scale(1.1);
-    transition: all 0.5s;
-  background-color: orangered;
-  color: rgb(240, 225, 220);
-  font-size: 25px;
-  border: 2px solid orangered;
-  border-radius: 50px;
-  padding: 14px 70px;
-  margin-top: 25px;
-}
 
-.pedidostext #tomate{
-width: 15vw;
-float: right;
-}
-.pedidostext #batata{
-  width: 30vw;
-  float: right;
- z-index: -1;
-}
-.pedidostext h1{
-  text-align: center;
-  color: rgb(0, 0, 0);
-}
-.pedidostext p{
-  text-align: center;
-}
-.pedidostext{
-  background-color: #eddddd;
-  z-index:-1;
-  margin-top: -1%;
-  
-}
 
-.pedidos h1{
-  margin: 0;
-  text-align: center;
-}
 
 .video {
 width: 100%;
@@ -478,7 +458,25 @@ width: 100%;
     opacity: 1;
   }
 }
-
-
+.menu-pedidos{
+  color:#fff;
+}
+.menu-pedidos li{
+  cursor: pointer;
+  transition: 0.2s ease;
+  opacity: 0.7;
+}
+ .menu-pedidos li:hover{
+  opacity: 1;
+ }
+ .itens{
+  float: right;
+  max-width: 50%;
+ }
+ .itensclass{
+  margin: 20px;
+  display: none;
+ }
+ 
 
 
