--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -1,19 +1,30 @@
 
-
-body {
-  background-color:white;
-}
-
-.container {
+  .pedidostext h1{
+    text-align: center;
+    color: rgb(0, 0, 0);
+  }
+  .pedidostext p{
+    text-align: center;
+  }
+  .pedidostext{
+   background: orangered;
+    z-index:-1;
+    margin-top: -1%;
+    
+  }
+  
+  .pedidos h1{
+    margin: 0;
+    text-align: center;
+  }
+  /**
+container {
   width: 300px;
   height: 400px;
   
   position: absolute;
   top:0; right: 0; left: 0; bottom: 0;
   margin: auto;
-  
-  background: url("../acess/WhatsApp\ Image\ 2023-06-14\ at\ 12.21.40.jpeg");
-  background-color: black;
   background-size: cover;
   cursor: pointer;
   
@@ -113,3 +124,5 @@ body {
     opacity: 1;
   }
 }
+
+.
