--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,13 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
 }
+
+.container label {
+  display: block;
+  background-color: #000;
+  color:#cccccc;
+  width: 100%;
+}
 details {
   z-index: 1;
   position:fixed;
