--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -1,22 +1,210 @@
 
-  .pedidostext h1{
+  @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
+ 
+  .menu-pedidos li{
+    scroll-behavior: smooth;
+    margin-top: 20px;
+    text-align: center;
+  list-style-type:none;
+  }
+  .menu-pedidos li{
+    cursor: pointer;
+    transition: 0.2s ease;
+    opacity: 0.7;
+  }
+
+.pedidostext h1{
+  margin-top: 0;
+  text-align: center;
+  font-size: 12vw;
+  font-family:'Just Another Hand', cursiva;
+  color: rgb(255, 149, 1);
+}
+body #itens .itensclass .containercomida{
+  display: flex;
+  justify-content:center ;
+  align-items: center;
+  gap: 100px 50px;
+  flex-wrap: wrap;
+  }
+
+  body #itens .itensclass .containercomida .card{
+    padding-top: 10px;
+    align-items: flex-start;
+    justify-content: center;
+    display: flex;
+    position: relative;
+    width:350px;
+    height: 300px;
+    background-color: aliceblue;
+    box-shadow: 0 30px 30px rgb(212, 212, 212);
+    border-radius: 9px;
+    transition: .5s;
+  }
+  
+  body #itens .itensclass .containercomida .card:hover{
+  height: 400px;
+}
+
+body #itens .itensclass .containercomida .card .imgcomida{
+  top:20px;
+  position: absolute;
+  width: 300px;
+  height: 220px;
+  transition: .5s;
+  border-radius: 12px;
+  overflow: hidden;
+}
+body #itens .itensclass .containercomida .card .imgcomida img{
+  position: absolute;
+  top:0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+body #itens .itensclass .containercomida .card .conteudocomida{
+  text-align: center;
+  position: absolute;
+  top:250px;
+  width: 100%;
+  height: 35px;
+  /*overflow: hidden;*/
+  transition: .5s;
+  padding: 0 30px;
+  overflow: hidden;
+}
+body #itens .itensclass .containercomida .card:hover .conteudocomida{
+  top: 150px;
+  height: 250px;
+}
+body #itens .itensclass .containercomida .card .conteudocomida h2{
+font-size: 1.5 rem;
+font-weight: 700;
+line-height:3rem;
+color:var(--cor);
+}
+
+body #itens .itensclass .containercomida .card .conteudocomida p{
+color: gray;
+}
+body #itens .itensclass .containercomida .card:hover .imgcomida {
+top:-100px;
+scale: .75;
+box-shadow: 0 15px 30px gray;
+}
+
+body #itens .itensclass .containercomida .card .conteudocomida a{
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 20px ;
+  text-decoration: none;
+  background:var(--cor) ;
+  border-radius: 10px;
+  color:#fff;
+}
+
+ .menu-pedidos li:hover{
+  opacity: 1;
+ }
+
+.pedidostext h1{
+  margin-top: 20px;
+  text-align: center;
+}
+.pedidostext p{
+  text-align: center;
+}
+
+main.cards button{
+padding: 0.5 rem 1rem;
+text-transform: uppercase;
+border-radius: 32px;
+border: 0;
+cursor: pointer;
+}
+#itens{
+  
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  height:100vh;
+  width: 100%;
+  background: white;
+}
+main .cards{
+  display: flex;
+  padding: 32px;
+}
+
+main.cards section.card{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 2fr 2fr 1fr;
+  background: rgb(240, 234, 234);
+  align-items: center;
+  display:flex;
+  flex-direction: column;
+  text-align: center;
+  height: 100vw;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  max-height:256px ;
+  margin-left: 32px;
+  box-shadow: 20px 20px 50px -30px #8c8c8d;
+}
+main.cards section.card :first-child{
+  margin-left: 0;
+}
+main.cards section.card #iconimg{
+  width: 80px;
+  height: 80px;
+}
+main.cards section.card span{
+  font-size: 80%;
+  font-weight: 300;
+  max-width:240px;
+}
+
+main.cards section.card img{
+  width: 100%;
+  margin: 16px 0;
+}
+main.cards section.card h2{
+font-size: 100%;
+}
+
+  section .pedidostext h1{
     text-align: center;
     color: rgb(0, 0, 0);
   }
-  .pedidostext p{
-    text-align: center;
+
+ 
+
+  .produtos{
+    width: 95%;
+    margin:0 auto;
+    display: grid;
+    background-color: white;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap:15px;
   }
-  .pedidostext{
-   background: orangered;
-    z-index:-1;
-    margin-top: -1%;
-    
+  .itens{
+    float: right;
+    max-width: 50%;
+   }
+   .itensclass{
+    margin: 20px;
+    display: none;
+   }
+   
+  .itens .produto .produtos #sucodemorango{
+  width: 10vw;
+  height: 10vw;
   }
   
-  .pedidos h1{
-    margin: 0;
-    text-align: center;
-  }
+  
   /**
 container {
   width: 300px;
