--- a/css/login.css
+++ b/css/login.css
@@ -4,27 +4,48 @@
 	box-sizing: border-box;
 }
 
-body {
+.container2{
+	left: 240px;
+	padding: 0;
+}
+.container2 body {
 	background: #f6f5f7;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
 	font-family: 'Montserrat', sans-serif;
-	height: 100vh;
+	height: 110vh;
 	margin: -20px 0 50px;
 }
 
-h1 {
+.container2 h1 {
 	font-weight: bold;
 	margin: 0;
 }
 
-h2 {
+.container2 #receberdados{
+	padding-top: 45%;
+}
+.container2 #receberdados input{
+	padding-top: 45%;
+	border-radius: 15px;
+	background-color: #eee;
+	border: none;
+	padding: 12px 15px;
+	margin: 4px 0;
+	width: 80%;
+	height: 2vw;
+}
+.container2 #entrar{
+	padding-top: 45%;
+}
+
+.container2 h2 {
 	text-align: center;
 }
 
-p {
+.container2 p {
 	font-size: 14px;
 	font-weight: 100;
 	line-height: 20px;
@@ -32,18 +53,19 @@ p {
 	margin: 20px 0 30px;
 }
 
-span {
+.container2 span {
 	font-size: 12px;
 }
 
-a {
+.container2 a {
 	color: #333;
 	font-size: 14px;
 	text-decoration: none;
 	margin: 15px 0;
 }
 
-button {
+.container2 button {
+	padding-top: 15px;
 	border-radius: 20px;
 	border: 1px solid #FF4B2B;
 	background-color: #FF4B2B;
@@ -69,32 +91,32 @@ button.ghost {
 	border-color: #FFFFFF;
 }
 
-form {
+.container2 form {
 	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
+	padding: 10px 50px;
+	height: 70%;
 	text-align: center;
 }
 
-label{
-	color: #333;
+.container2 label{
 	font-size: 14px;
-	text-decoration: none;
 	margin: 15px 0;
 }
-input {
+.container2  input {
+
 	border-radius: 15px;
 	background-color: #eee;
 	border: none;
 	padding: 12px 15px;
 	margin: 4px 0;
 	width: 100%;
-	height: 1%;
+	height: 2vw;
 }
+
 
 select {
 	border-radius: 15px;
@@ -103,7 +125,7 @@ select {
 	padding: 12px 15px;
 	margin: -3px 0 2px;
 	width: 100%;
-	height: 1%;
+	height: 2%;
 }
 
 .container2 {
@@ -113,7 +135,8 @@ select {
 			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
 	overflow: hidden;
-	width: 768px;
+	width: 70vw;
+	height: 50vw;
 	max-width: 100%;
 	min-height: 480px;
 }
@@ -123,6 +146,9 @@ select {
 	top: 0;
 	height: 100%;
 	transition: all 0.6s ease-in-out;
+}
+.form-container .sign-up-container{
+	background-position: 0;
 }
 
 .sign-in-container {
