--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
-*{
-font-family: 'Montserrat', sans-serif;;
-}
+
+  *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+  }
+
 
 *, 
 *:after,
@@ -23,6 +28,7 @@ html{
   --secoColor: #fff9f9;
   --cornerRad: 4px;
 }
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
@@ -309,6 +315,7 @@ section .home{
   border-radius: 50px;
   padding: 14px 70px;
   margin-top: 25px;
+  transition: 0.3s;
 }
 .conteudo a:hover{
   transform: scale(1.1);
@@ -352,19 +359,25 @@ section .home{
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   .co{
       font-size: 12px;
+    }
   }
-}
+  
+  .video {
+    width: 100%;
+  }
+  
+  .rodape{
+    position: fixed;
+     left: 0;
+     bottom: 0;
+     width: 100%;
+     background-color: orangered;
+     color: white;
+     text-align: center;
+  }
 
-
-
-
-
-
-.video {
-width: 100%;
-}
  
-.cardapio {
+/* .cardapio {
   justify-content: space-evenly;
   margin-left: 4vw;
   border-radius: 10px;
@@ -386,10 +399,10 @@ width: 100%;
   opacity: 0;
   transition: all 0.5s;
 
-}
+} */
 
 
-.items {
+/* .items {
   padding-left: 20px;
   letter-spacing: 3px;
 }
@@ -465,25 +478,8 @@ width: 100%;
     opacity: 1;
   }
 }
-.menu-pedidos{
-  color:#fff;
-}
-.menu-pedidos li{
-  cursor: pointer;
-  transition: 0.2s ease;
-  opacity: 0.7;
-}
- .menu-pedidos li:hover{
-  opacity: 1;
- }
- .itens{
-  float: right;
-  max-width: 50%;
- }
- .itensclass{
-  margin: 20px;
-  display: none;
- }
- 
+ */
+
+
 
 
