--- a/css/cardapio.css
+++ b/css/cardapio.css
@@ -1,52 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family= Josefin +Sans:wght@700 & display=swap');
 
-  @import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
- 
-  .menu-pedidos li{
-    scroll-behavior: smooth;
-    margin-top: 20px;
-    text-align: center;
-  list-style-type:none;
-  }
-  .menu-pedidos li{
-    cursor: pointer;
-    transition: 0.2s ease;
-    opacity: 0.7;
-  }
-
-.pedidostext h1{
-  margin-top: 0;
-  text-align: center;
-  font-size: 12vw;
-  font-family:'Just Another Hand', cursiva;
-  color: rgb(255, 149, 1);
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body #itens .itensclass .containercomida{
-  display: flex;
-  justify-content:center ;
-  align-items: center;
-  gap: 100px 50px;
-  flex-wrap: wrap;
-  }
+/*onde vai ficar os cards, ajustar*/
+body{
+  min-height: 100vw;
+  background-color: rgb(56, 54, 54);
+}
 
-  body #itens .itensclass .containercomida .card{
-    padding-top: 10px;
-    align-items: flex-start;
-    justify-content: center;
-    display: flex;
-    position: relative;
-    width:350px;
-    height: 300px;
-    background-color: aliceblue;
-    box-shadow: 0 30px 30px rgb(212, 212, 212);
-    border-radius: 9px;
-    transition: .5s;
-  }
-  
-  body #itens .itensclass .containercomida .card:hover{
+.containercomida{
+display: flex;
+justify-content:center ;
+align-items: center;
+gap: 100px 50px;
+flex-wrap: wrap;
+}
+
+.containercomida .card{
+  padding-top: 10px;
+  top:10px;
+  align-items: flex-start;
+  justify-content: center;
+  display: flex;
+  position: relative;
+  width:350px;
+  height: 300px;
+  background-color:transparent;
+  box-shadow: 0 35px 80px;
+  border-radius: 9px;
+  transition: .5s;
+}
+
+.containercomida .card:hover{
   height: 400px;
 }
 
-body #itens .itensclass .containercomida .card .imgcomida{
+.containercomida .card .imgcomida{
   top:20px;
   position: absolute;
   width: 300px;
@@ -55,7 +47,7 @@ body #itens .itensclass .containercomida .card .imgcomida{
   border-radius: 12px;
   overflow: hidden;
 }
-body #itens .itensclass .containercomida .card .imgcomida img{
+.containercomida .card .imgcomida img{
   position: absolute;
   top:0;
   left: 0;
@@ -64,7 +56,7 @@ body #itens .itensclass .containercomida .card .imgcomida img{
   object-fit: cover;
 }
 
-body #itens .itensclass .containercomida .card .conteudocomida{
+.containercomida .card .conteudocomida{
   text-align: center;
   position: absolute;
   top:250px;
@@ -75,9 +67,126 @@ body #itens .itensclass .containercomida .card .conteudocomida{
   padding: 0 30px;
   overflow: hidden;
 }
-body #itens .itensclass .containercomida .card:hover .conteudocomida{
+.containercomida .card:hover .conteudocomida{
   top: 150px;
   height: 250px;
+}
+.containercomida .card .conteudocomida h2{
+  font-family: 'Poppins', sans-serif;
+font-size: 1.5 rem;
+font-weight: 700;
+line-height:3rem;
+color:var(--cor);
+}
+
+.containercomida .card .conteudocomida p{
+font-style: italic;
+color: gray;
+}
+.containercomida .card:hover .imgcomida {
+top:-100px;
+scale: .75;
+box-shadow: 0 15px 15px rgb(0, 0, 0);
+}
+
+.containercomida .card .conteudocomida a{
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 20px ;
+  text-decoration: none;
+  background:var(--cor) ;
+  border-radius: 10px;
+  color:#fff;
+}
+
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Just+Another+Hand&display=swap');
+ 
+.menu-pedidos li{
+  scroll-behavior: smooth;
+  margin-top: 20px;
+  text-align: center;
+list-style-type:none;
+}
+.menu-pedidos li{
+  cursor: pointer;
+  transition: 0.2s ease;
+  opacity: 0.7;
+}
+
+.pedidostext h3{
+  font-style: italic;
+  font-family:'Arial Narrow', sans-serif;
+margin-top: 0;
+text-align: center;
+font-size: 4vw;
+color:brown;
+transition: 0.5s;
+}
+.pedidostext h3:hover{
+  transform: scale(1.5em);
+}
+body #itens .itensclass .containercomida{
+display: flex;
+justify-content:center ;
+align-items: center;
+gap: 100px 50px;
+flex-wrap: wrap;
+}
+
+body #itens .itensclass .containercomida .card{
+  padding-top: 10px;
+  align-items: flex-start;
+  justify-content: center;
+  display: flex;
+  position: relative;
+  width:350px;
+  height: 300px;
+  background-color: aliceblue;
+  box-shadow: 0 30px 30px rgb(212, 212, 212);
+  border-radius: 9px;
+  transition: .5s;
+}
+
+body #itens .itensclass .containercomida .card:hover{
+height: 400px;
+}
+
+body #itens .itensclass .containercomida .card .imgcomida{
+top:20px;
+position: absolute;
+width: 300px;
+height: 220px;
+transition: .5s;
+border-radius: 12px;
+overflow: hidden;
+}
+body #itens .itensclass .containercomida .card .imgcomida img{
+position: absolute;
+top:0;
+left: 0;
+width: 100%;
+height: 100%;
+object-fit: cover;
+}
+
+body #itens .itensclass .containercomida .card .conteudocomida{
+text-align: center;
+position: absolute;
+top:250px;
+width: 100%;
+height: 35px;
+/*overflow: hidden;*/
+transition: .5s;
+padding: 0 30px;
+overflow: hidden;
+}
+body #itens .itensclass .containercomida .card:hover .conteudocomida{
+top: 150px;
+height: 250px;
 }
 body #itens .itensclass .containercomida .card .conteudocomida h2{
 font-size: 1.5 rem;
@@ -96,221 +205,14 @@ box-shadow: 0 15px 30px gray;
 }
 
 body #itens .itensclass .containercomida .card .conteudocomida a{
-  display: inline-block;
-  margin-top: 15px;
-  padding: 10px 20px ;
-  text-decoration: none;
-  background:var(--cor) ;
-  border-radius: 10px;
-  color:#fff;
-}
-
- .menu-pedidos li:hover{
-  opacity: 1;
- }
-
-.pedidostext h1{
-  margin-top: 20px;
-  text-align: center;
-}
-.pedidostext p{
-  text-align: center;
-}
-
-main.cards button{
-padding: 0.5 rem 1rem;
-text-transform: uppercase;
-border-radius: 32px;
-border: 0;
-cursor: pointer;
-}
-#itens{
-  
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  height:100vh;
-  width: 100%;
-  background: white;
-}
-main .cards{
-  display: flex;
-  padding: 32px;
-}
-
-main.cards section.card{
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 2fr 1fr;
-  background: rgb(240, 234, 234);
-  align-items: center;
-  display:flex;
-  flex-direction: column;
-  text-align: center;
-  height: 100vw;
-  padding: 1rem 1.5rem;
-  border-radius: 8px;
-  max-height:256px ;
-  margin-left: 32px;
-  box-shadow: 20px 20px 50px -30px #8c8c8d;
-}
-main.cards section.card :first-child{
-  margin-left: 0;
-}
-main.cards section.card #iconimg{
-  width: 80px;
-  height: 80px;
-}
-main.cards section.card span{
-  font-size: 80%;
-  font-weight: 300;
-  max-width:240px;
-}
-
-main.cards section.card img{
-  width: 100%;
-  margin: 16px 0;
-}
-main.cards section.card h2{
-font-size: 100%;
-}
-
-  section .pedidostext h1{
-    text-align: center;
-    color: rgb(0, 0, 0);
-  }
-
- 
-
-  .produtos{
-    width: 95%;
-    margin:0 auto;
-    display: grid;
-    background-color: white;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-gap:15px;
-  }
-  .itens{
-    float: right;
-    max-width: 50%;
-   }
-   .itensclass{
-    margin: 20px;
-    display: none;
-   }
-   
-  .itens .produto .produtos #sucodemorango{
-  width: 10vw;
-  height: 10vw;
-  }
-  
-  
-  /**
-container {
-  width: 300px;
-  height: 400px;
-  
-  position: absolute;
-  top:0; right: 0; left: 0; bottom: 0;
-  margin: auto;
-  background-size: cover;
-  cursor: pointer;
-  
-  -webkit-box-shadow: 0 0 5px #000;
-        box-shadow: 0 0 5px #000;
-  }
-
-.overlay {
-  width: 100%;
-  height: 100%;
-  
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 2fr 2fr 1fr;
-  
-  background: rgba(77, 77, 77, .9);
-  color:white;
-  opacity: 0;
-  transition: all 0.5s;
-
+display: inline-block;
+margin-top: 15px;
+padding: 10px 20px ;
+text-decoration: none;
+background:var(--cor) ;
+border-radius: 10px;
+color:#fff;
 }
 
 
-.items {
-  padding-left: 20px;
-  letter-spacing: 3px;
-}
 
-.head {
-  font-size: 30px;
-  line-height: 40px;
-  
-  transform: translateY(40px);
-  transition: all 0.7s;
-  hr {
-    display: block;
-    width: 0;
-    
-    border: none;
-    border-bottom: solid 2px white;
-    
-    position: absolute;
-    bottom: 0; left:20px;
-    
-    transition: all .5s;
-  }
-}
-
-.price {
-  font-size: 22px;
-  line-height: 10px;
-  font-weight: bold;  
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 0.7s;
-  .old {
-    text-decoration: line-through;
-    color: lighten(rgb(77, 77, 77),40%);
-  }
-}
-
-.cart {
-  font-size: 12px;
-  opacity: 0;
-  letter-spacing: 1px;
-  font-family: 'Lato', sans-serif;
-  transform: translateY(40px);
-  transition: all 0.7s;
-  i {
-    font-size: 16px;
-  }
-  span {
-    margin-left: 10px;
-  }
-}
-
-.container:hover .overlay {
-  opacity: 1;
-  & .head {
-    transform: translateY(0px);
-  }
-  
-  & hr {
-    width: 75px;
-    transition-delay: 0.4s;
-  }
-  
-  & .price {
-    transform: translateY(0px);
-    transition-delay: 0.3s;
-    opacity: 1;
-  }
-  
-  & .cart {
-    transform: translateY(0px);
-    transition-delay: 0.6s;
-    opacity: 1;
-  }
-}
-
-.
