--- a/css/login.css
+++ b/css/login.css
@@ -3,8 +3,11 @@
 * {
 	box-sizing: border-box;
 }
-
+body{
+	background-color: rgb(56, 54, 54);;
+}
 .container2{
+	top:60px;
 	left: 240px;
 	padding: 0;
 }
@@ -38,7 +41,7 @@
 	height: 2vw;
 }
 .container2 #entrar{
-	padding-top: 45%;
+	padding-top: 55%;
 }
 
 .container2 h2 {
@@ -67,8 +70,8 @@
 .container2 button {
 	padding-top: 15px;
 	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+	border: 1px solid rgb(98, 23, 23);
+	background-color: brown;
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -92,6 +95,7 @@ button.ghost {
 }
 
 .container2 form {
+	padding:45%;
 	background-color: #FFFFFF;
 	display: flex;
 	align-items: center;
@@ -251,3 +255,53 @@ select {
 .container2.right-panel-active .overlay-right {
 	transform: translateX(20%);
 }
+
+
+.container-footer{
+	display: flex;
+	flex-direction: row;
+	background-color: brown;
+	width: 100%;
+	margin-top: 5%;
+	height: 50vh;
+	padding: 5%;
+}
+
+.container-footer a {
+	text-decoration: none;
+	color: white;
+}
+.container-contato {
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	margin-left: 10%;
+}
+
+.container-contato img {
+	width: 10%;
+	margin-left: 10%;
+	margin-top: 5%;
+}
+
+.container-sociais{
+	display: flex;
+	width: 90%;
+	height: 10vh;
+	/* background-color: #FF4B2B; */
+	margin-left: 180%;
+	margin-top: -40%;
+	padding: 5%;
+}
+
+.container-sociais img{
+	width: 18%;
+	margin: 7% 4%;
+}
+
+.container-sociais h2 {
+	margin-left: 5%;
+}
+
+
+
