--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ html{
   min-height: 100%;
 }
 :root {
-  --primColor: #e5621c;
+  --primColor: brown;
   --secoColor: #fff9f9;
   --cornerRad: 4px;
 }
@@ -47,7 +47,7 @@ details {
   left: 0;
   width:100%;
   height: 65px;
-  background-color: #e5621c;
+  background-color: brown;
 } 
 
 summary {
@@ -93,13 +93,13 @@ details[open] summary::before {
 details[open] summary::after {
   content: "";
 }
+
 .menu {
   float: right;
   position: fixed;
   height: 0;
   width: fit-content;
-  border-radius: var(--cornerRad);
-  background-color: var(--primColor);
+  background-color: brown;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
   margin-top: 8px;
   display: flex;
@@ -257,8 +257,8 @@ section .home{
 .conteudo h1{
   font-family: 'Josefin Sans', sans-serif;
   text-transform: uppercase;
-  color:rgb(255, 86, 8);
-  font-size:60px;
+  color:brown;
+  font-size:5vw;
   text-align: center;
     --c:white; /* the color */
     --s: .15em;
@@ -279,7 +279,7 @@ section .home{
   
 .conteudo h1 {
   --b: 0.1em;  
-  --c: orangered; /* a cor */
+  --c: brown; /* a cor */
   
   color: #0000;
   padding-block: var(--b);
@@ -308,9 +308,9 @@ section .home{
 
 .conteudo a{
   font-style: Arial;
-  text-decoration:bold;
+  text-decoration: bold;
   display: inline-block;
-  color: orangered;
+  color:brown;
   font-size: 25px;
   border-radius: 50px;
   padding: 14px 70px;
@@ -320,10 +320,10 @@ section .home{
 .conteudo a:hover{
   transform: scale(1.1);
     transition: all 0.5s;
-  background-color: #ff4400;
+  background-color: brown;
   color: rgb(240, 225, 220);
   font-size: 25px;
-  border: 2px solid orangered;
+  border: 2px solid  brown;
   border-radius: 50px;
   padding: 14px 70px;
   margin-top: 25px;
@@ -333,7 +333,7 @@ section .home{
 
 .conteudo p{
   color: #fff;
-  margin-top: 10vw;
+  margin-top: 8vw;
   font-family: Arial;
   overflow: hidden; 
   border-right: .15em solid orange; /* O cursor de digito */
@@ -354,7 +354,7 @@ section .home{
 /* cursor animado*/
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange }
+  50% { border-color: rgb(255, 0, 0) }
 }
 @media only screen and (min-width: 768px) and (max-width: 959px) {
   .co{
@@ -371,11 +371,56 @@ section .home{
      left: 0;
      bottom: 0;
      width: 100%;
-     background-color: orangered;
+     background-color: brown;
      color: white;
      text-align: center;
   }
 
+  .container-footer{
+    display: flex;
+    flex-direction: row;
+    background-color: brown;
+    width: 100%;
+    margin-top: 5%;
+    height: 50vh;
+    padding: 5%;
+  }
+  
+  .container-footer a {
+    text-decoration: none;
+    color: white;
+  }
+  .container-contato {
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    margin-left: 10%;
+  }
+  
+  .container-contato img {
+    width: 10%;
+    margin-left: 10%;
+    margin-top: 5%;
+  }
+  
+  .container-sociais{
+    display: flex;
+    width: 90%;
+    height: 10vh;
+    /* background-color: #FF4B2B; */
+    margin-left: 180%;
+    margin-top: -40%;
+    padding: 5%;
+  }
+  
+  .container-sociais img{
+    width: 18%;
+    margin: 7% 4%;
+  }
+  
+  .container-sociais h2 {
+    margin-left: 5%;
+  }
  
 /* .cardapio {
   justify-content: space-evenly;
