--- a/css/alterarDados.css
+++ b/css/alterarDados.css
@@ -1,4 +1,8 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+
+  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,7 +24,7 @@ html{
   min-height: 100%;
 }
 :root {
-  --primColor: #e5621c;
+  --primColor: brown;
   --secoColor: #fff9f9;
   --cornerRad: 4px;
 }
@@ -43,7 +47,7 @@ details {
   left: 0;
   width:100%;
   height: 65px;
-  background-color: #e5621c;
+  background-color: brown;
 } 
 
 summary {
@@ -89,13 +93,13 @@ details[open] summary::before {
 details[open] summary::after {
   content: "";
 }
+
 .menu {
   float: right;
   position: fixed;
   height: 0;
   width: fit-content;
-  border-radius: var(--cornerRad);
-  background-color: var(--primColor);
+  background-color: brown;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
   margin-top: 8px;
   display: flex;
@@ -149,4 +153,88 @@ details[open]::before {
   }
 }
 
-    
+.container2 {
+  display: block;
+  margin-top: 10%;
+  width: 50%;
+}
+
+
+.container-footer{
+	display: flex;
+	flex-direction: row;
+	background-color: brown;
+	width: 200%;
+	margin-top: 5%;
+	height: 50vh;
+	padding: 5%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  background-color: #cccccc;
+  width: 100%;
+  margin-left: 50%;
+  border-radius: 15px;
+}
+
+form h1 {
+  text-align: center;
+  font-size: 20px;
+}
+
+input, select {
+  padding: 8px;
+    border-radius: 6px;
+    outline:none
+}
+
+button{
+  background-color: brown;
+  color: #fff;
+  border: brown;
+  border-radius: 10px;
+  height: 5vh;
+}
+
+.container-footer a {
+	text-decoration: none;
+	color: white;
+}
+.container-contato {
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	margin-left: 10%;
+}
+
+.container-contato img {
+	width: 10%;
+	margin-left: 10%;
+	margin-top: 5%;
+}
+
+.container-sociais{
+	display: flex;
+	width: 90%;
+	height: 10vh;
+	/* background-color: #FF4B2B; */
+	margin-left: 180%;
+	margin-top: -40%;
+	padding: 5%;
+}
+
+.container-sociais img{
+	width: 18%;
+	margin: 7% 4%;
+}
+
+.container-sociais h2 {
+	margin-left: 5%;
+}
+
+
+
+
+
