--- a/css/mostrarDados.css
+++ b/css/mostrarDados.css
@@ -1,4 +1,8 @@
-*{
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+
+  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,7 +24,7 @@ html{
   min-height: 100%;
 }
 :root {
-  --primColor: #e5621c;
+  --primColor: brown;
   --secoColor: #fff9f9;
   --cornerRad: 4px;
 }
@@ -43,7 +47,7 @@ details {
   left: 0;
   width:100%;
   height: 65px;
-  background-color: #e5621c;
+  background-color: brown;
 } 
 
 summary {
@@ -89,13 +93,13 @@ details[open] summary::before {
 details[open] summary::after {
   content: "";
 }
+
 .menu {
   float: right;
   position: fixed;
   height: 0;
   width: fit-content;
-  border-radius: var(--cornerRad);
-  background-color: var(--primColor);
+  background-color: brown;
   box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.2);
   margin-top: 8px;
   display: flex;
@@ -148,5 +152,80 @@ details[open]::before {
     opacity: 0;
   }
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  /* background-color: aquamarine; */
+  width: 70%;
+  margin-top: 4%;
+  margin-left: 20%;
+}
+
+.container-listas{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+legend {
+  font-weight: bold;
+}
+
+fieldset {
+  border-radius: 10px;
+  border: solid black 1px ;
+  padding:.8em;
+}
+
+label {
+  background-color: #fff;
+  color:#fff; 
+}
+
+form {
+  margin: 2%;
+}
+
+
+
+.container-footer a {
+	text-decoration: none;
+	color: white;
+}
+.container-contato {
+	display: flex;
+	flex-direction: column;
+	width: 30%;
+	margin-left: 10%;
+}
+
+.container-contato img {
+	width: 10%;
+	margin-left: 10%;
+	margin-top: 5%;
+}
+
+.container-sociais{
+	display: flex;
+	width: 90%;
+	height: 10vh;
+	/* background-color: #FF4B2B; */
+	margin-left: 180%;
+	margin-top: -40%;
+	padding: 5%;
+}
+
+.container-sociais img{
+	width: 18%;
+	margin: 7% 4%;
+}
+
+.container-sociais h2 {
+	margin-left: 5%;
+}
+
+
+
 
 
