--- a/css/mostrarDados.css
+++ b/css/mostrarDados.css
@@ -32,14 +32,9 @@ html{
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
+  background-color: #383636;
 }
 
-.container label {
-  display: block;
-  background-color: #000;
-  color:#cccccc;
-  width: 100%;
-}
 details {
   z-index: 1;
   position:fixed;
@@ -162,10 +157,17 @@ details[open]::before {
   margin-left: 20%;
 }
 
+.container {
+  display: block;
+  color:#ffffff;
+  width: 100%;
+}
+
 .container-listas{
-    text-align: center;
-    font-size: 20px;
-    font-weight: bold;
+  margin-top: 10%;
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 20%;
 }
 
 legend {
@@ -179,15 +181,41 @@ fieldset {
 }
 
 label {
-  background-color: #fff;
   color:#fff; 
+  width: 50%;
+  border-radius: 10px;
 }
 
 form {
+  display: flex;
+  flex-direction: row;
   margin: 2%;
+  /* width: 70%; */
 }
 
+input {
+  border-radius: 5px;
+  width: 60%;
+  padding: 1%;
+}
 
+button {
+  border-radius: 10px;
+  background-color: brown;
+  color: #fff;
+  width: 20%;
+  padding: 1%;
+}
+
+.container-footer{
+	display: flex;
+	flex-direction: row;
+	background-color: brown;
+	width: 100%;
+	margin-top: 5%;
+	height: 50vh;
+	padding: 5%;
+}
 
 .container-footer a {
 	text-decoration: none;
@@ -224,8 +252,6 @@ form {
 .container-sociais h2 {
 	margin-left: 5%;
 }
-
-
 
 
 
