--- a/css/login.css
+++ b/css/login.css
@@ -25,6 +25,7 @@ body{
 .container2 h1 {
 	font-weight: bold;
 	margin: 0;
+	margin-top: 30%;
 }
 
 .container2 #receberdados{
@@ -79,6 +80,7 @@ body{
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	transition: transform 80ms ease-in;
+	margin-top: 5%;
 }
 
 button:active {
@@ -126,10 +128,9 @@ select {
 	border-radius: 15px;
 	background-color: #eee;
 	border: none;
-	padding: 12px 15px;
-	margin: -3px 0 2px;
+	padding: auto;
+	margin: -3px 0 2%;
 	width: 100%;
-	height: 2%;
 }
 
 .container2 {
